--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="Dark_pink">#C80B63</color>
     <color name="light_pink">#E01483</color>
     <color name="pink1">#F80679</color>
+    <color name="Light_gray">#F0C7C1C5</color>
+    <color name="Green">#038508</color>
 </resources>
