--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,42 +7,118 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MyProfileActivity"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical"
+       android:gravity="center_horizontal"
+       android:layout_margin="16dp"
+       >
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@drawable/icon_image"
+        android:layout_marginTop="20dp"
+        />
+       <androidx.appcompat.widget.AppCompatButton
+           android:layout_width="250dp"
+           android:id="@+id/btnMyProfileChooseImage"
+           android:text="Choose image"
+           android:textColor="@color/white"
+           android:textSize="15dp"
+           android:textStyle="bold"
+           android:background="@drawable/btn_bg_verify_otp"
+           android:layout_height="45dp"/>
+
+       <TextView
+           android:id="@+id/tvMyProfileName"
+           android:layout_width="match_parent"
+           android:layout_height="45dp"
+           android:layout_centerHorizontal="true"
+           android:fontFamily="@font/alata"
+           android:text="Name"
+           android:textColor="@color/pink"
+           android:textSize="16dp"
+           android:paddingLeft="16dp"
+           android:gravity="center_vertical"
+           android:background="@drawable/et_bg_shape"
+           android:textStyle="bold"
+           android:layout_gravity="center_horizontal"
+           android:layout_marginTop="30dp"
+           />
     <TextView
-        android:id="@+id/tvName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/tvMyProfilemobileNo"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
         android:layout_centerHorizontal="true"
         android:fontFamily="@font/alata"
-        android:text="Name"
+        android:text="Mobileno"
         android:textColor="@color/pink"
-        android:textSize="30dp"
+        android:textSize="16dp"
+        android:paddingLeft="16dp"
+        android:gravity="center_vertical"
+        android:background="@drawable/et_bg_shape"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         />
-    <TextView
-        android:id="@+id/tvEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="@font/alata"
-        android:text="Email"
-        android:textColor="@color/pink"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        />
+       <TextView
+           android:id="@+id/tvMyProfileEmail"
+           android:layout_width="match_parent"
+           android:layout_height="45dp"
+           android:layout_centerHorizontal="true"
+           android:fontFamily="@font/alata"
+           android:text="Email id"
+           android:textColor="@color/pink"
+           android:textSize="16dp"
+           android:paddingLeft="16dp"
+           android:gravity="center_vertical"
+           android:background="@drawable/et_bg_shape"
+           android:textStyle="bold"
+           android:layout_gravity="center_horizontal"
+           android:layout_marginTop="20dp"
+           />
+       <TextView
+           android:id="@+id/tvMyProfileUsername"
+           android:layout_width="match_parent"
+           android:layout_height="45dp"
+           android:layout_centerHorizontal="true"
+           android:fontFamily="@font/alata"
+           android:text="Username"
+           android:textColor="@color/pink"
+           android:textSize="16dp"
+           android:paddingLeft="16dp"
+           android:gravity="center_vertical"
+           android:background="@drawable/et_bg_shape"
+           android:textStyle="bold"
+           android:layout_gravity="center_horizontal"
+           android:layout_marginTop="20dp"
+           />
+       <androidx.appcompat.widget.AppCompatButton
+           android:layout_width="250dp"
+           android:layout_height="50dp"
+           android:layout_gravity="center"
+           android:id="@+id/btnUpdateProfile"
+           android:textSize="15dp"
+           android:text="Update Profile"
+           android:background="@drawable/buttonshape"
+           android:textColor="@color/white"
+           android:layout_marginTop="30dp"
+           />
+
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:id="@+id/btnSignout"
+        android:textSize="15dp"
         android:text="signout"
         android:background="@drawable/buttonshape"
         android:textColor="@color/white"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         />
+
 </LinearLayout>
+</ScrollView>
