--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,7 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="ShowActionBar" parent="Theme.Material3.DayNight">
+    </style>
     <style name="Theme.BeautyProduct" parent="Base.Theme.BeautyProduct" />
 </resources>
